@@ -1,3 +1,7 @@
+2004-11-18 Mikhail Khodjaiants
+	Fix for bug 69184: Activate the Expression view when expression is added.
+	* AddExpressionEditorActionDelegate.java
+
 2004-11-15 Mikhail Khodjaiants
 	Fix for bug 78604: Disassembly causes Java exception when disassembling beyond fn(?).
 	* DisassemblyEditorInput.java
